# Dye2SMILES

./: .gitignore  LCSMILES.spec  LCSMILES_windows.spec  LICENSE  README.md  WINDOWS_BUILD.md  environment-windows.yml  environment.yml  pyproject.toml
.github/workflows/: build-windows.yml
assets/: lcsmiles_icon.icns
packaging/: lcsmiles_app.py
packaging/osra-runtime/: README.md
packaging/osra-runtime-win/: README.md
scripts/: build_macos.sh  build_windows.bat  create_windows_env.bat  run_app.bat  run_app.command  verify_known_images.py  verify_quality_suite.py
src/lcsmiles/: __init__.py  abbreviations.py  cli.py  core.py  gui.py  ocsr.py
tests/: test_core.py  test_image_quality.py
